tests/golden/3-basic-and-simple-literals/invalid/common/bad-boolean-literals-4.yini
^ App
feature     = maybe      # ❌ Not a recognized boolean literal
logging     = "on"       # ❌ Quoted, so it's a string not a boolean
debug       = 'off'      # ❌ Quoted, so it's a string not a boolean
